tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamespaceBinding1WithExport(target=es2015).errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
client.ts(1,1): error TS1191: An import declaration cannot have modifiers.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== server.ts (0 errors) ====
    var a = 10;
    export default a;
    
==== client.ts (1 errors) ====
    export import defaultBinding, * as nameSpaceBinding  from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var x: number = defaultBinding;